ejs template engine

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="nav-wrapper container">
-          <a href="#" class="brand-logo">CRUD</a>
+          <a href="/" class="brand-logo">CRUD</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/add-item">Add Item</a></li>
             
@@ -20,13 +20,10 @@
         </div>
       </nav>
 
-      <div class="container">
-        <ul class="collection with-header">
-          <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-          <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-          <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-          <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-        </ul>
+      <div class="container center-align">
+        <br><br><i class="large material-icons prefix">sentiment_very_dissatisfied</i>
+        <h1>Oops!!</h1>
+        <h3>404 - PAGE NOT FOUND</h3>
       </div>
 
       
