--- a/views/add-item.ejs
+++ b/views/add-item.ejs
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="nav-wrapper container">
-          <a href="#" class="brand-logo">CRUD</a>
+          <a href="/" class="brand-logo">CRUD</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="add-item.html">Add Item</a></li>
             
