add materializecss to add item page

--- a/views/add-item.ejs
+++ b/views/add-item.ejs
@@ -26,8 +26,14 @@
           <button class="btn">Add Item</button>
         </form>
       </div>
-  </div>  
-
-      
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script>
+      document.addEventListener("DOMContentLoaded", function(event){
+        //do
+        M.updateTextFields();
+      })
+  </script> 
+  
 </body>
 </html>
