--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
           
             <% items.forEach(item => { %>
               <li class="collection-item">
-                <div><%= item.name %> $<%= item.price %><a href="#!" 
+                <div><a href="/items/<%= item.id %>"><%= item.name %> $<%= item.price %></a><a href="#!" 
                   class="secondary-content"><i 
                   class="material-icons">delete</i><i 
                   class="material-icons">edit</i></a>
