add delete request

--- a/views/item-detail.ejs
+++ b/views/item-detail.ejs
@@ -13,8 +13,20 @@
       <h5>item name : <%= item.name %></h5>
       <h5>item price : <%= item.price %></h5>
     </div>
-    <a class="delete btn" href="">delete</a>
+    <a id="deleteBtn" class="delete btn" data-id="<%= item._id %>" href="">delete</a>
   </div>
+  <script>
+    deleteBtn.onclick = function(e){
+      e.preventDefault();
+      //const id = deleteBtn.dataset.id
+      const id = e.target.getAttribute('data-id')
+      console.log(id)
+      const endpoint = `/items/${id}`
+      fetch(endpoint, {
+        method: 'DELETE'
+      }).then(()=>{}).catch(err => console.log(err))
+    }
+  </script>
     
 </body>
 </html>
